@@ -316,6 +316,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 10591) Use Arabic numerals (0,1,2...) for the Malayam language
 * (bug 10642) Fix shift-click checkbox behavior for Opera 9.0+ and 6.0
 * Work around Safari bug with pages ending in ".gz" or ".tgz"
+* Removed obsolete maintenance/changeuser.sql script; use RenameUser extension
 
 
 == API changes since 1.10 ==
